--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "next": "^15.0.3",
     "payload": "3.40.0",
     "react": "19.1",
-    "react-dom": "^18.2.0",
+    "react-dom": "19.1",
     "react-hook-form": "^7.57.0",
     "react-use": "^17.6.0",
     "sharp": "0.32.6"
