--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "@payloadcms/payload-cloud": "3.40.0",
     "@payloadcms/richtext-lexical": "3.40.0",
     "@payloadcms/ui": "3.40.0",
+    "@supabase/supabase-js": "^2.49.10",
     "bootstrap": "^5.3.6",
     "commitizen": "^4.3.1",
     "cross-env": "^7.0.3",
+    "express": "^5.1.0",
     "framer-motion": "^12.16.0",
     "graphql": "^16.8.1",
     "lenis": "^1.3.4",
@@ -39,6 +41,8 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
+    "@types/express": "^5.0.2",
+    "@types/express-fileupload": "^1.5.1",
     "@types/node": "^22.5.4",
     "@types/react": "19.1.0",
     "@types/react-dom": "19.1.2",
