--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
 # Added by Payload
 PAYLOAD_SECRET=adbb902a866b6fe9a12c9d16
 DATABASE_URI=mongodb://127.0.0.1/payload-for-build
+NEXT_PUBLIC_BASE_API_URL=http://localhost:3000
