--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "@payloadcms/db-mongodb": "3.40.0",
     "@payloadcms/next": "3.40.0",
     "@payloadcms/payload-cloud": "3.40.0",
+    "@payloadcms/plugin-cloud-storage": "^3.41.0",
     "@payloadcms/richtext-lexical": "3.40.0",
     "@payloadcms/ui": "3.40.0",
     "@supabase/supabase-js": "^2.49.10",
     "bootstrap": "^5.3.6",
     "commitizen": "^4.3.1",
     "cross-env": "^7.0.3",
+    "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "framer-motion": "^12.16.0",
     "graphql": "^16.8.1",
