--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "generate:types": "cross-env NODE_OPTIONS=--no-deprecation payload generate:types",
     "lint": "cross-env NODE_OPTIONS=--no-deprecation next lint",
     "payload": "cross-env NODE_OPTIONS=--no-deprecation payload",
-    "start": "cross-env NODE_OPTIONS=--no-deprecation next start"
+    "start": "cross-env NODE_OPTIONS=--no-deprecation next start",
+    "test": "jest"
   },
   "dependencies": {
     "@emotion/styled": "^11.14.0",
@@ -50,6 +51,7 @@
     "@types/react-dom": "19.1.2",
     "eslint": "^9.16.0",
     "eslint-config-next": "15.3.0",
+    "jest": "^29.7.0",
     "prettier": "^3.4.2",
     "typescript": "5.7.3"
   },
