--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^7.1.1",
     "@payloadcms/db-mongodb": "3.40.0",
+    "@payloadcms/db-sqlite": "^3.42.0",
     "@payloadcms/next": "3.40.0",
     "@payloadcms/payload-cloud": "3.40.0",
     "@payloadcms/plugin-cloud-storage": "^3.41.0",
     "@payloadcms/richtext-lexical": "3.40.0",
     "@payloadcms/ui": "3.40.0",
+    "@prisma/client": "^6.9.0",
     "@supabase/supabase-js": "^2.49.10",
     "bootstrap": "^5.3.6",
     "commitizen": "^4.3.1",
@@ -36,11 +38,13 @@
     "motion": "^11.18.2",
     "next": "^15.0.3",
     "payload": "3.40.0",
+    "prisma": "^6.9.0",
     "react": "19.1",
     "react-dom": "19.1",
     "react-hook-form": "^7.57.0",
     "react-use": "^17.6.0",
-    "sharp": "0.32.6"
+    "sharp": "0.32.6",
+    "sqlite3": "^5.1.7"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
