--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "lint": "cross-env NODE_OPTIONS=--no-deprecation next lint",
     "payload": "cross-env NODE_OPTIONS=--no-deprecation payload",
     "start": "cross-env NODE_OPTIONS=--no-deprecation next start",
-    "test": "jest"
+    "test": "jest",
+    "postinstall": "npx payload migrate"
   },
   "dependencies": {
     "@emotion/styled": "^11.14.0",
